# guitar-synthesizer

./: .gitignore  Makefile  README.md  pyproject.toml
demo/: play_chorus.py  play_diablo.py
demo/tabs/: foggy-mountain-breakdown.yaml
src/guitar_synth/: burst.py  chord.py  instrument.py  pitch.py  processing.py  stroke.py  synthesis.py  temporal.py  track.py
src/tablature/: models.py  player.py
tests/: conftest.py
tests/test_guitar_synth/: test_burst.py  test_instrument.py  test_pitch.py  test_processing.py  test_synthesis.py  test_temporal.py  test_track.py
