[tool.poetry]
name = "guitar-synthesizer"
version = "0.1.0"
description = ""
authors = ["FranChesK0"]
license = "MIT license"
readme = "README.md"
packages = [{include = "guitar_synth", from = "src"}]

[tool.poetry.scripts]
play-tab = "tablature.player:main"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.3"
pedalboard = "^0.9.16"
pydantic = "^2.10.2"
pyyaml = "^6.0.2"


[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
flake8-pyproject = "^1.2.3"
isort = "^5.13.2"
mypy = "^1.13.0"
pytest = "^8.3.3"
types-pyyaml = "^6.0.12.20240917"


[tool.black]
line-length = 90
target-version = ["py312"]

[tool.flake8]
max-line-length = 90
count = true

[tool.isort]
profile = "black"
py_version = 312
line_length = 90
length_sort = true
multi_line_output = 3
include_trailing_comma = true
src_paths = ["src", "tests"]
extend_skip = ["__init__.py"]

[tool.mypy]
mypy_path = "src"
python_version = "3.12"
explicit_package_bases = true
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
show_error_codes = true

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = ["--import-mode=importlib",]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
